--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,48 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-# Use a package of configuration called an orb.
-orbs:
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
+# Use a package of configuration called an orb. (skipped)
+
+# Create job
+jobs:
+  print_hello:
+    environment: 
+      GREET: "Hello"
+    docker:
+      - image: circleci/alpine:3.12
+    steps:
+      - run: 
+          name: print greet message
+          command: |
+            echo $MSG
+  print_world:
+    environment:
+      SUBJECT: "World"
+    docker:
+      - image: circleci/alpine:3.12
+    steps:
+      - run:
+          name: print greeet subject
+          command: |
+            echo $SUBJECT
+
+  print_name:
+    docker:
+      - image: circleci/alpine:3.12
+    steps:
+      - run:
+          name: users name
+          command: |
+            echo $MYNAME
+
+            
 # Orchestrate or schedule a set of jobs
 workflows:
   # Name the workflow "welcome"
-  welcome:
+  hello_world:
     # Run the welcome/run job in its own container
     jobs:
-      - welcome/run
+      - print_hello
+      - print_world:
+          requires: [print-hello]
+      - print_name:
+          requires: [print_hello, print_world]
