Fixed sintax erros

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,6 @@ workflows:
     jobs:
       - print_hello
       - print_world:
-          requires: [print-hello]
+          requires: [print_hello]
       - print_name:
           requires: [print_hello, print_world]
