--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,27 @@ jobs:
           command: |
             echo $MYNAME
 
+  save_hello_world_output:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - run:
+          name: save hello world
+          command: |
+            echo "hello world" > output.txt
+      - persist_to_workspace:
+          root: /tmp/dir
+          paths:
+            - ~/output.txt
+            - output.txt
+  
+  print_output_file:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - attach_workspace:
+          at: ~/
+      - run: cat ~/output.txt
             
 # Orchestrate or schedule a set of jobs
 workflows:
@@ -42,7 +63,10 @@ workflows:
     # Run the welcome/run job in its own container
     jobs:
       - print_hello
+      - save_hello_world_output
       - print_world:
           requires: [print_hello]
       - print_name:
           requires: [print_hello, print_world]
+      - print_output_file:
+          requires: [save_hello_world_output]
