--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,11 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
+# Command section
+commands:
+  print_pipeline_id:
+    description: "A very simple command that prints workflow ID"
+    steps:
+      - run: echo $CIRCLE_WORKFLOW_ID
 # Use a package of configuration called an orb. (skipped)
 
 # Create job
@@ -54,6 +60,13 @@ jobs:
       - attach_workspace:
           at: ~/
       - run: cat ~/output.txt
+  
+  use_command:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - print_pipeline_id
+
             
 # Orchestrate or schedule a set of jobs
 workflows:
@@ -62,10 +75,11 @@ workflows:
     # Run the welcome/run job in its own container
     jobs:
       - print_hello
-      - save_hello_world_output
+      # - save_hello_world_output
       - print_world:
           requires: [print_hello]
       - print_name:
           requires: [print_hello, print_world]
-      - print_output_file:
-          requires: [save_hello_world_output]
+      # - print_output_file:
+      #     requires: [save_hello_world_output]
+      - use_command
