--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,10 +71,7 @@ jobs:
     docker:
       - image: circleci/node:13.8.0
     steps: 
-      - run:
-          name: fail on purpose
-          command: |
-            return 1
+      - run: return 1
       - run:
           name: handle the error
           command: |
